# RTestimation

./: CMakeLists.txt  LICENSE  README.md
experiments/exp1/: keypoints.yml
plot/: plot.py
src/: main.cpp  pointMarker.cpp
src/cameras/: Cam.cpp  Cam.hpp  OmniCam.cpp  OmniCam.hpp
src/matching/: autoMatching.cpp  autoMatching.hpp  manualMatching.cpp  manualMatching.hpp
src/rtEstimation/: rtEstimation.cpp  rtEstimation.hpp  sphericalPoseSolver.hpp
src/utils/: experimentManager.cpp  experimentManager.hpp
